Full Version. Includes following changes and features:
- Restructured the index.html page. Added styling to search button.
-  Added list view of the foundWords result in Index.js.
- Added highlight option to the list menu to allow rows to be colored when clicked.
- Added book icons next to list items.
-Added jQuery support and scripting.

--- a/word unscrambler/manifest.json
+++ b/word unscrambler/manifest.json
@@ -1,13 +1,13 @@
 {
 
   "manifest_version": 2,
-  "name": "Word Unscrambler",
+  "name": "Words Unscrambler",
   "version": "1.0",
   "description": "Enter any word and the app will return with a list of relevant words",
 
 "applications": {
   "gecko": {
-    "id": "guessnum@example.com"
+    "id": "wordsunscrambler@example.com"
   }
 },
 
@@ -25,15 +25,7 @@
 },
 
 "permissions":[
-	"activeTab",
-	"clipboardWrite",
-	"clipboardRead"
-],
-
-  "web_accessible_resources": [
-  	"unscrambler/js/WordFinder.js",
-  	"unscrambler/js/index.js",
-  	"ScrabbleDict.js"
-  ]
+	"activeTab"
+]
 
 }
